english page done,too. the slide problem, the nav align problem are fixed. and some other improvment.

--- a/css/main.less
+++ b/css/main.less
@@ -17,6 +17,39 @@ body {
     font-weight: 100;
 }
 
+html[lang="en"]{
+    .nav div:not(.langs) a{
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+    .intro{
+        .title{
+            text-transform: uppercase;
+        }
+    }
+    .about{
+        h3{
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+    }
+    @media (max-width:1000px){
+        .about{
+            height: 250px;
+        }
+    }
+    @media (max-width:768px){
+        .about{
+            height: 300px;
+        }
+    }
+    @media (max-width:425px){
+        .about{
+            height: 230px;
+        }
+    }
+}
+
 ul {
     margin: 0;
     padding-left: 0;
@@ -109,7 +142,7 @@ p {
 .button {
     display: inline-block;
     padding: 15px;
-    margin: 0 25px;
+    margin: 0 10px;
     margin-top: 25px;
 }
 
@@ -118,7 +151,6 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    align-items: flex-end;
 
     &.flex-col {
         flex-direction: column;
@@ -131,19 +163,16 @@ p {
 
 #header {
     position: sticky;
-    top: -68px;
+    top: -72px;
     z-index: 10;
     background: #fff;
 }
 
 .logo {
-    margin: 0 auto;
-    width: 20%;
-    max-width: 180px;
-
+    height: 110px;
     img {
-        width: 100%;
-        height: auto;
+        height: 100%;
+        margin: 0 auto;
     }
 }
 
@@ -173,19 +202,18 @@ p {
     .col-3 {
         padding: 0 15px;
     }
-
     a {
         display: block;
-        padding: 10px 5px;
+        padding: 10px 2px;
         border: 3px solid @branding-green;
         border-radius: 10px;
         background: #fff;
-        letter-spacing: 0.5em;
+        letter-spacing: 0.3em;
         text-decoration: none;
         color: #000;
 
         span {
-            margin-right: -0.5em;
+            margin-right: -0.3em;
         }
     }
 
@@ -267,7 +295,6 @@ dropdown-content就不能先給他設定display block。
     .about {
         display: flex;
         padding: 10px;
-
         div {
             padding: 15px;
             border: 1px solid @branding-gray;
@@ -347,19 +374,30 @@ dropdown-content就不能先給他設定display block。
 }
 
 .info {
+    text-align: center;
     ul {
-        max-width: 340px;
-        margin: 0 auto;
         margin-bottom: 30px;
+        display: inline-block;
+        text-align: start;
     }
-
+    i{
+        color: @branding-green;
+    }
     li {
         padding: 5px 0;
         line-height: 1.5em;
         letter-spacing: 1px;
         font-size: 0.99rem;
+        .address{
+            float: left;
+        }
+        span{
+            float: right;
+        }
     }
-
+    label{
+        text-transform: capitalize;
+    }
     a {
         text-decoration: none;
         color: #000;
@@ -371,8 +409,7 @@ dropdown-content就不能先給他設定display block。
 }
 
 #footer {
-    padding: 40px 0;/* 
-    background: @branding-gray; */
+    padding: 40px 0;
     color: @branding-gray;
     justify-content: space-evenly;
     align-items: center;
@@ -380,8 +417,8 @@ dropdown-content就不能先給他設定display block。
         margin: 10px;
     }
     img {
-        width: 100%;
-        height: auto;
+        height: 3rem;
+        margin: 10px;
     }
 }
 
@@ -399,14 +436,16 @@ dropdown-content就不能先給他設定display block。
 }
 
 @media (max-width:1000px) {
+    html {
+        font-size: 17px;
+    }
     .container {
         max-width: 650px;
     }
-
     .about {
         width: 50%;
+        height: 230px;
     }
-
     .product {
         a{
             width: 30%;
@@ -426,10 +465,8 @@ dropdown-content就不能先給他設定display block。
     }
     .logo {
         float: left;
-        height: 110px;
-        width: auto;
+        height: 80px;
     }
-
     .nav {
         display: none;
         position: fixed;
@@ -451,54 +488,63 @@ dropdown-content就不能先給他設定display block。
             width: 100%;
             font-size: 1.3rem;
         }
+        ul:not(.lang){
+            display: inline-block;
+            text-align: start;
+        }
         li{
             float: unset;
-            margin: 20px auto;
+            margin-top: 20px;
             width: 100%;
         }
         a{
             border: none;
             background: transparent;
             color: #fff;
-            display: flex;  /* ←in order to align the icon to center */
+            display: flex;  /* ←in order to align the icon infront of <a> to center */
             justify-content: center;
             align-items: center;
+            width: fit-content;
             &::before{
                 content: "\f111";
                 display: inline-block;
                 font-family: "Font Awesome 6 Free";
-                font-size: 0.3rem;
+                font-size: 0.5rem;
+                font-weight: 900;
+                padding-right: 10px;
             }
         }
         .dropdown-content{
             /* display: block; */  /* 反正js裡已經設定了小於786就要show */
             position: static;
-            padding-left: 40px;
-            padding-right: 0;
+            padding: 0;
             font-size: 0.9em;
             a{
+                margin-left: 10px;
                 &::before{
                     content: "-";
+                    padding-right: 5px;
                 }
             }
         }
         .langs{
             top: unset;
-            bottom: 10%;
+            bottom: 90px;
             right: 50%;
             -webkit-transform: translateX(50%);
             transform: translateX(50%);
             width: 230px;
             a{
+                margin: 0 auto;
                 padding: 0;
                 color: #fff;
                 &::before{
-                    content: "";
+                    content: none;
                 }
             }
             .lang{
                 display: flex;
-                justify-content: center;
+                margin-top: 5px;
             }
         }
     }
@@ -562,6 +608,9 @@ dropdown-content就不能先給他設定display block。
             }
         }
     }
+    .about{
+        height: 255px;
+    }
     .map iframe{
         width: 100%;
     }
@@ -573,13 +622,11 @@ dropdown-content就不能先給他設定display block。
     }
     .about{
         width: 100%;
+        height: 210px;
     }
     .product{
         a{
             width: 45%;
         }
-    }
-    .info li{
-        text-align: center;
     }
 }
